<resources>
    <string name="app_name">Kihon Weather</string>
    <string name="action_settings">Settings</string>
    <string name="action_stations">Nearby Stations</string>
    <string name="action_locations">Find Location</string>
    <string name="action_forecast">Forecast</string>

    <string name="title_activity_settings">Settings</string>

    <string name="welcome_text">Welcome to Kihon Weather.\n\nTouch the Floating Action Button (FAB) to get / refresh the weather.</string>

    <string name="welcome_find">Welcome to Kihon Weather.\n\nPlease enter Name, Zip Code, or Airport Code of US location for weather forecast. Forecast Data is from Weather Underground.</string>

    <string name="getting_data">Getting Data...</string>

    <string name="location_result_empty">0 results found. Please try a different query</string>
    <string name="location_result_error">Error getting data, please check network and try again.</string>
    <string name="location_result_fmt">%d results found. Please select from below.</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_key_api_key">api_key</string>
    <string name="pref_title_api_key">Wunderground API Key</string>
    <string name="pref_default_api_key_bad">XXXX_WUNDERGROUND_API_KEY_XXXX</string>
    <string name="pref_default_api_key">fd29c0623b94099c</string>

    <string name="pref_key_zip_code">zip_code</string>
    <string name="pref_title_zip_code">Zip Code</string>
    <string name="pref_default_zip_code">98101</string>

    <string name="pref_title_app_info">App Info</string>
</resources>
